set width of searchbars to 11% to prevent overlap when narrow

--- a/static/styles/empornium/style.css
+++ b/static/styles/empornium/style.css
@@ -358,6 +358,7 @@ span.stat {
     font-size: 0.9em;
     color: #222;
     position: relative;
+    width:11%;
 }
 
 #searchbars ul {
